# cardiocode

./: .gitignore  .mcp.json  AGENTS.md  INSTALLATION.md  INSTALL_GUIDE.md  README.md  as_management_extract.txt  example_usage.py  install.py  mcp_config.json  opencode.json  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
cardiocode/: README.md  __init__.py  function_proposals.json  guideline_registry.json  pdf_notifications.json
cardiocode/assessments/: __init__.py  cardio_oncology.py  devices.py  syncope.py  valvular.py  vte.py
cardiocode/calculators/: __init__.py  arrhythmia_risk.py  hf_prognosis.py  pah_risk.py  pe_scores.py
cardiocode/core/: __init__.py  evidence.py  recommendation.py  types.py
cardiocode/guidelines/: __init__.py
cardiocode/guidelines/acs_nstemi/: __init__.py  antithrombotic.py  diagnosis.py  risk_stratification.py  secondary_prevention.py
cardiocode/guidelines/atrial_fibrillation/: __init__.py  ablation.py  rate_control.py  rhythm_control.py  stroke_prevention.py
cardiocode/ingestion/: __init__.py  dynamic_generator.py  knowledge_builder.py  knowledge_extractor.py  knowledge_manager.py  pdf_watcher.py
cardiocode/knowledge/: __init__.py  esc_eacts_2025_as.json  extractor.py  guidelines.json  scores.py  search.py
cardiocode/mcp/: __init__.py  knowledge.py  llm_tools.py  server.py  tools.py
cardiocode/pathways/: __init__.py  hf_treatment.py  pe_treatment.py  syncope_pathway.py  vt_management.py
cardiocode/reasoning/: __init__.py  synthesizer.py  uncertainty.py
source_pdfs/: 2025_ESC_AS_extracted.txt
(+68 files in other folders)
