[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cardiocode"
version = "0.1.0"
description = "Cardiology knowledge framework encoding ESC clinical guidelines as executable Python code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CardioCode Team"}
]
keywords = ["cardiology", "guidelines", "ESC", "clinical-decision-support", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]
pdf = [
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
]

[project.scripts]
cardiocode-mcp = "cardiocode.mcp.server:serve"

[project.urls]
Homepage = "https://github.com/cardiocode/cardiocode"
Documentation = "https://github.com/cardiocode/cardiocode#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["cardiocode*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
